--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,22 @@
-theme: minima
-# title: Eric Nolette
+title: datamachine
 description: 
-# author: Some Person
+author: "Eric Nolette"
+
+theme: minima
+
+# Minima social links
+github_username: ericnolette
+linkedin_username: eric-nolette-479407a8
+
+# Minima: show excerpts in the frontpage
+show_excerpts: False
+
+minima:
+  date_format: "%Y-%m-%d"
+
+header_pages:
+  - _pages/welcome.md
+  - _pages/about.md
+
+include:
+  - _pages
