--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: minima
 
 # Minima social links
 github_username: ericnolette
-linkedin_username: eric-nolette-479407a8
+linkedin_username: enolette
 
 # Minima: show excerpts in the frontpage
 show_excerpts: False
